--- a/src/client/style.css
+++ b/src/client/style.css
@@ -37,9 +37,8 @@ body,
 #root {
   margin: 0;
   padding: 0;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 body {
@@ -47,6 +46,7 @@ body {
   font-family: "Monogram Extended", Arial, Helvetica, sans-serif;
   background-color: var(--color-background);
   color: var(--color-text);
+  min-height: 100vh;
 }
 
 #game-container {
